Refinando a automação de testes na API ReqRes com Robot Framework

--- a/Documentos/Sprint 5/Semana 10/Automação de Testes com Robot Framework/Reqres API/report.html
+++ b/Documentos/Sprint 5/Semana 10/Automação de Testes com Robot Framework/Reqres API/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,1321],[],[[5,0,0,[],[1,383,936],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,1340],[],[[5,0,0,[],[1,387,952],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Users Tests","*c:\\Users\\raiqu\\Desktop\\Nero\\Estágio\\Documentos das Sprints\\Documentos\\Sprint 5\\Semana 10\\Automação de Testes com Robot Framework\\Reqres API\\tests\\users_tests.robot","eNrdT80KgkAQfpUQvDaaRCAmiBZ0idA6x2ZjLbaOzq70+u1ul56hy8fHfD8zk4nFk7HbBp18YQoAZQoXjayBhZxmqFD3hkY4IhPstAnLJCzihySoqJ0VDoZ0uIruwmEzshyM/pHgO7LaGhpUYhCWxhEUsyElfNnGY0KuBS2cURt0bS0pizXdyOX3LBS+iXuocWJvKE4HsFa7cHYXXz1fsgsE+X/9k4HIP+u7jY4=","*<p>Cenários de testes para o endpoint /users\x3c/p>","*Cenário 04: Deletes a user 204"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Users Tests","*c:\\Users\\raiqu\\Desktop\\Nero\\Estágio\\Documentos das Sprints\\Documentos\\Sprint 5\\Semana 10\\Automação de Testes com Robot Framework\\Reqres API\\tests\\users_tests.robot","eNrdT80KgkAQfpUQvDaaRCAmiBZ0idA6x2ZjLbaOzq70+u1ul56hy8fHfD8zk4nFk7HbBp18YQoAZQoXjayBhZxmqFD3hkY4IhPstAnLJCzihySoqJ0VDoZ0uIruwmEzshyM/pHgO7LaGhpUYhCWxhEUsyElfNnGY0KuBS2cURt0bS0pizXdyOX3LBS+iXuocWJvKE4HsFa7cHYXXz1fsgsE+X/9k4HIP+u7jY4=","*<p>Cenários de testes para o endpoint /users\x3c/p>","*Cenário 04: PATCH Updates a user 200"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"Users Tests","name":"Users Tests","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1747964555295;
+window.output["baseMillis"] = 1748034518311;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 1341;
+window.output["generated"] = 1358;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
